--- a/main.html
+++ b/main.html
@@ -12,5 +12,42 @@
 </script>
 
 </body>
-
+	<table>
+        <thead>
+            <tr>
+                <th>Roll numbers</th>
+                <th>Names</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>Aniket</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Shubham</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Srushti</td>
+            </tr>
+        </tbody>
+    </table>
+    <h1>List of medias</h1>
+    <ol>
+        <li><img src="https://picsum.photos/id/123/200/300" alt="img"></li>
+        <li>
+            <video controls autoplay muted width="300px">
+                <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </li>
+        <li>
+            <audio controls>
+                <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+                Your browser does not support the audio element.
+            </audio>
+        </li>
+    </ol>
 </html>
