--- a/main.html
+++ b/main.html
@@ -44,9 +44,7 @@
             </video>
         </li>
         <li>
-            <audio controls>
-                <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
-                Your browser does not support the audio element.
+            <audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls>
             </audio>
         </li>
     </ol>
